# rules_proto_grpc

./: WORKSPACE  package.json  repositories.bzl
protobuf_ts/: BUILD.bazel  plugin.bzl
